2006-08-07  Thomas Wood  <thos@gnome.org>

	* engines/crux/src/crux-draw.c: (draw_box), (draw_arrow),
	(draw_tab):
	- cairo based arrow drawing
	- improved scrollbar steppers
	- draw gradients on handle boxes

	(draw_extension): Match the inner stroke colour on bottom tabs to the
	colour in draw_box.

	(draw_handle): Don't draw boxes around handles that
	are on the panel


2006-08-04  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/crux/src/crux-draw.c: (draw_box):
	- Fix another possible crash bug.

2006-08-03 Andrew Johnson <acjgenius@earthlink.net>

	* engines/glide/src/glide_gtk2_support.c:
	(do_glide_draw_simple_circle):
	* engines/thinice/src/thinice_theme_draw.c:
	(thinice_style_draw_option):

	- Remove evil reset clip code

2006-08-03 Andrew Johnson <acjgenius@earthlink.net>

	* engines/thinice/src/thinice_theme_draw.c:
	- Quick fix to Use Min(width, height)/2 for option radius

2006-08-03 Andrew Johnson <acjgenius@earthlink.net>
	* engines/clearlooks/src/clearlooks_draw.c:
	* engines/clearlooks/src/clearlooks_rc_style.c:
	* engines/clearlooks/src/clearlooks_style.c:
	* engines/glide/src/glide_gtk2_drawing.c:
	* engines/glide/src/glide_gtk2_support.c:
	* engines/mist/src/mist-rc-style.c:
	* engines/mist/src/mist-style.c:
	* engines/redmond/src/redmond_gtk2_engine.c:
	* engines/smooth/src/engine/shared/gtk/smooth_gtk_drawing.c:
	* engines/smooth/src/engine/shared/gtk/smooth_gtk_misc.c:
	* engines/smooth/src/engine/shared/gtk/smooth_gtk_misc.h:
	* engines/smooth/src/engine/shared/gtk/smooth_gtk_rc.c:
	* engines/smooth/src/engine/shared/gtk/smooth_gtk_rc.h:
	* engines/smooth/src/engine/smooth_gtk2_drawing.c:
	* engines/smooth/src/engine/smooth_gtk2_engine.c:
	* engines/smooth/src/engine/smooth_gtk2_misc.c:
	* engines/smooth/src/engine/smooth_gtk2_misc.h:
	* engines/smooth/src/engine/smooth_gtk2_rc.c:
	* engines/smooth/src/engine/smooth_gtk2_rc.h:
	* engines/smooth/src/interfaces/abstract/abstract_drawing_interface.c: